Add ap_id_index